基本已完成

--- a/src/static/css/login.css
+++ b/src/static/css/login.css
@@ -56,8 +56,22 @@
     border:0px
 }
 #jiantou{
+    
 color:aqua;
+animation:none !important;
+margin-left:28px;
+position: relative;
+top:-20px;
 }
 #jiantou1{
 display:none;
+animation:none !important;
+margin-left:35px;
+position: relative;
+top:-20px;
+}
+
+#getYan{
+    color:#888888
+    
 }
